Run RelocateNMethod.java with all GCs